sync '.' name handle from gitpod

--- a/hero_streamlit_test.ipynb
+++ b/hero_streamlit_test.ipynb
@@ -191,7 +191,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb2a5b7a443f45ff9bf7ee2603fcba78",
+       "model_id": "2df09723f4a44233995070f0744e75dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -336,7 +336,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84e5a3b217c64bab8c60c0597c543ecc",
+       "model_id": "220528f6355c40d18f32f4f0e64281ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -962,7 +962,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2508acc48a04a6298d24481087166e2",
+       "model_id": "e4a6412bf15a48d6b20b1e5128d8891e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1423,15 +1423,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2_names = df2.name.values # delete '.' so that name will match HeroPlan\n",
+    "new_df2_names = []\n",
+    "for name in df2_names:\n",
+    "    new_df2_names.append(name.replace('.',\"\"))\n",
+    "\n",
+    "df2['name'] = np.array(new_df2_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(881,)\n",
-      "(881, 86)\n"
+      "(887,)\n",
+      "(887, 86)\n"
      ]
     },
     {
@@ -1480,7 +1494,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>876</th>\n",
+       "      <th>882</th>\n",
        "      <td>Xavier</td>\n",
        "      <td>yellow</td>\n",
        "      <td>5</td>\n",
@@ -1504,7 +1518,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>877</th>\n",
+       "      <th>883</th>\n",
        "      <td>Zandria</td>\n",
        "      <td>yellow</td>\n",
        "      <td>5</td>\n",
@@ -1528,7 +1542,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>878</th>\n",
+       "      <th>884</th>\n",
        "      <td>Zekena</td>\n",
        "      <td>yellow</td>\n",
        "      <td>5</td>\n",
@@ -1552,7 +1566,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>879</th>\n",
+       "      <th>885</th>\n",
        "      <td>Zhang Fei</td>\n",
        "      <td>yellow</td>\n",
        "      <td>5</td>\n",
@@ -1576,7 +1590,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>880</th>\n",
+       "      <th>886</th>\n",
        "      <td>Zhuge Liang</td>\n",
        "      <td>yellow</td>\n",
        "      <td>5</td>\n",
@@ -1606,58 +1620,58 @@
       ],
       "text/plain": [
        "            name   color star      class      speed  power  attack  defense  \\\n",
-       "876       Xavier  yellow    5      Rogue    Average    940     951      887   \n",
-       "877      Zandria  yellow    5    Paladin  Very Slow    835     815      879   \n",
-       "878       Zekena  yellow    5  Barbarian       Fast    812     801      756   \n",
-       "879    Zhang Fei  yellow    5    Fighter       Fast    825     856      758   \n",
-       "880  Zhuge Liang  yellow    5   Sorcerer       Slow    825     710      879   \n",
+       "882       Xavier  yellow    5      Rogue    Average    940     951      887   \n",
+       "883      Zandria  yellow    5    Paladin  Very Slow    835     815      879   \n",
+       "884       Zekena  yellow    5  Barbarian       Fast    812     801      756   \n",
+       "885    Zhang Fei  yellow    5    Fighter       Fast    825     856      758   \n",
+       "886  Zhuge Liang  yellow    5   Sorcerer       Slow    825     710      879   \n",
        "\n",
        "     health                 skill  ... Max level CB3: Health  \\\n",
-       "876    1672   Cascading Whirlwind  ...                   NaN   \n",
-       "877    1711   Unwavering Devotion  ...                   NaN   \n",
-       "878    1396        Swift Stingers  ...                   NaN   \n",
-       "879    1417           Viper Blade  ...                   NaN   \n",
-       "880    1545  Martial Masterstroke  ...                   NaN   \n",
+       "882    1672   Cascading Whirlwind  ...                   NaN   \n",
+       "883    1711   Unwavering Devotion  ...                   NaN   \n",
+       "884    1396        Swift Stingers  ...                   NaN   \n",
+       "885    1417           Viper Blade  ...                   NaN   \n",
+       "886    1545  Martial Masterstroke  ...                   NaN   \n",
        "\n",
        "    Max level CB3: Power Limit Break CB3 #1: Attack  \\\n",
-       "876                  NaN                        NaN   \n",
-       "877                  NaN                        NaN   \n",
-       "878                  NaN                        NaN   \n",
-       "879                  NaN                        NaN   \n",
-       "880                  NaN                        NaN   \n",
+       "882                  NaN                        NaN   \n",
+       "883                  NaN                        NaN   \n",
+       "884                  NaN                        NaN   \n",
+       "885                  NaN                        NaN   \n",
+       "886                  NaN                        NaN   \n",
        "\n",
        "    Limit Break CB3 #1: Defense Limit Break CB3 #1: Health  \\\n",
-       "876                         NaN                        NaN   \n",
-       "877                         NaN                        NaN   \n",
-       "878                         NaN                        NaN   \n",
-       "879                         NaN                        NaN   \n",
-       "880                         NaN                        NaN   \n",
+       "882                         NaN                        NaN   \n",
+       "883                         NaN                        NaN   \n",
+       "884                         NaN                        NaN   \n",
+       "885                         NaN                        NaN   \n",
+       "886                         NaN                        NaN   \n",
        "\n",
        "    Limit Break CB3 #1: Power  Limit Break CB3 #2: Attack  \\\n",
-       "876                       NaN                         NaN   \n",
-       "877                       NaN                         NaN   \n",
-       "878                       NaN                         NaN   \n",
-       "879                       NaN                         NaN   \n",
-       "880                       NaN                         NaN   \n",
+       "882                       NaN                         NaN   \n",
+       "883                       NaN                         NaN   \n",
+       "884                       NaN                         NaN   \n",
+       "885                       NaN                         NaN   \n",
+       "886                       NaN                         NaN   \n",
        "\n",
        "    Limit Break CB3 #2: Defense  Limit Break CB3 #2: Health  \\\n",
-       "876                         NaN                         NaN   \n",
-       "877                         NaN                         NaN   \n",
-       "878                         NaN                         NaN   \n",
-       "879                         NaN                         NaN   \n",
-       "880                         NaN                         NaN   \n",
+       "882                         NaN                         NaN   \n",
+       "883                         NaN                         NaN   \n",
+       "884                         NaN                         NaN   \n",
+       "885                         NaN                         NaN   \n",
+       "886                         NaN                         NaN   \n",
        "\n",
        "     Limit Break CB3 #2: Power  \n",
-       "876                        NaN  \n",
-       "877                        NaN  \n",
-       "878                        NaN  \n",
-       "879                        NaN  \n",
-       "880                        NaN  \n",
+       "882                        NaN  \n",
+       "883                        NaN  \n",
+       "884                        NaN  \n",
+       "885                        NaN  \n",
+       "886                        NaN  \n",
        "\n",
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,18 +1685,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dolgoon\n",
+      "Kalo\n",
+      "Cristobal\n",
+      "Vainamoinen\n",
+      "Budatin\n",
+      "Kemeny\n",
+      "Marie-Therese\n",
+      "Marie-Therese C\n",
+      "Lemminkainen\n",
+      "D'Artagnan\n",
+      "Jean-Francois\n",
+      "Caitlin\n",
+      "Penolite\n",
+      "\n",
+      " Total missed names count is  13\n"
+     ]
+    }
+   ],
    "source": [
     "# df3 = pd.merge(df, df2, on='name', how=\"outer\") # outer-join mode\n",
     "# print(df3.shape)\n",
-    "# df3.tail()"
+    "# df3.tail()\n",
+    "\n",
+    "# Find what are missed in the merged df\n",
+    "df3_names = df3.name.values\n",
+    "df_names = df.name.values\n",
+    "count=0\n",
+    "for _,v in enumerate(df_names):\n",
+    "    if not v in df3_names:\n",
+    "        print(v)\n",
+    "        count+=1\n",
+    "\n",
+    "print('\\n Total missed names count is ',count) # difficult cases, to be dealt with later"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1691,8 +1745,8 @@
      "text": [
       "[0 1 2 3]\n",
       "[nan  0.  1.  2.  3.]\n",
-      "(666, 86)\n",
-      "(174, 86)\n",
+      "(670, 86)\n",
+      "(176, 86)\n",
       "(37, 86)\n",
       "(4, 86)\n"
      ]
@@ -1709,15 +1763,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "there are total 881 heroes, of which 174 are costume1 and 37 are costume2\n",
-      "So number of unique non-costume heroes are 666\n"
+      "there are total 887 heroes, of which 176 are costume1 and 37 are costume2\n",
+      "So number of unique non-costume heroes are 670\n"
      ]
     }
    ],
@@ -1728,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1748,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1819,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1867,7 +1921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1906,7 +1960,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>870</th>\n",
+       "      <th>876</th>\n",
        "      <td>Vivica C2</td>\n",
        "      <td>yellow</td>\n",
        "      <td>5</td>\n",
@@ -1925,10 +1979,10 @@
       ],
       "text/plain": [
        "          name   color star speed  Power  Attack  Defense  Health  \\\n",
-       "870  Vivica C2  yellow    5  Slow    755     696      702    1359   \n",
+       "876  Vivica C2  yellow    5  Slow    755     696      702    1359   \n",
        "\n",
        "      Aether Power   source   family  \n",
-       "870  Heal Increase  Season1  Classic  "
+       "876  Heal Increase  Season1  Classic  "
       ]
      },
      "metadata": {},
@@ -1970,7 +2024,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>870</th>\n",
+       "      <th>876</th>\n",
        "      <td>Vivica C2</td>\n",
        "      <td>yellow</td>\n",
        "      <td>5</td>\n",
@@ -1989,10 +2043,10 @@
       ],
       "text/plain": [
        "          name   color star speed  Power  Attack  Defense  Health  \\\n",
-       "870  Vivica C2  yellow    5  Slow  902.0   858.0    866.0  1676.0   \n",
+       "876  Vivica C2  yellow    5  Slow  902.0   858.0    866.0  1676.0   \n",
        "\n",
        "      Aether Power   source   family  \n",
-       "870  Heal Increase  Season1  Classic  "
+       "876  Heal Increase  Season1  Classic  "
       ]
      },
      "metadata": {},
@@ -2034,7 +2088,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>870</th>\n",
+       "      <th>876</th>\n",
        "      <td>Vivica C2</td>\n",
        "      <td>yellow</td>\n",
        "      <td>5</td>\n",
@@ -2053,10 +2107,10 @@
       ],
       "text/plain": [
        "          name   color star speed  Power  Attack  Defense  Health  \\\n",
-       "870  Vivica C2  yellow    5  Slow  916.0   862.0    870.0  1758.0   \n",
+       "876  Vivica C2  yellow    5  Slow  916.0   862.0    870.0  1758.0   \n",
        "\n",
        "      Aether Power   source   family  \n",
-       "870  Heal Increase  Season1  Classic  "
+       "876  Heal Increase  Season1  Classic  "
       ]
      },
      "metadata": {},
@@ -2098,7 +2152,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>870</th>\n",
+       "      <th>876</th>\n",
        "      <td>Vivica C2</td>\n",
        "      <td>yellow</td>\n",
        "      <td>5</td>\n",
@@ -2117,10 +2171,10 @@
       ],
       "text/plain": [
        "          name   color star speed   Power  Attack  Defense  Health  \\\n",
-       "870  Vivica C2  yellow    5  Slow  1059.0   975.0    984.0  2270.0   \n",
+       "876  Vivica C2  yellow    5  Slow  1059.0   975.0    984.0  2270.0   \n",
        "\n",
        "      Aether Power   source   family  \n",
-       "870  Heal Increase  Season1  Classic  "
+       "876  Heal Increase  Season1  Classic  "
       ]
      },
      "metadata": {},
@@ -2162,7 +2216,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>868</th>\n",
+       "      <th>874</th>\n",
        "      <td>Vivica</td>\n",
        "      <td>yellow</td>\n",
        "      <td>5</td>\n",
@@ -2181,10 +2235,10 @@
       ],
       "text/plain": [
        "       name   color star speed  Power  Attack  Defense  Health Aether Power  \\\n",
-       "868  Vivica  yellow    5  Slow    755     714      694    1328   Defense Up   \n",
+       "874  Vivica  yellow    5  Slow    755     714      694    1328   Defense Up   \n",
        "\n",
        "      source   family  \n",
-       "868  Season1  Classic  "
+       "874  Season1  Classic  "
       ]
      },
      "metadata": {},
@@ -2226,7 +2280,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>868</th>\n",
+       "      <th>874</th>\n",
        "      <td>Vivica</td>\n",
        "      <td>yellow</td>\n",
        "      <td>5</td>\n",
@@ -2245,10 +2299,10 @@
       ],
       "text/plain": [
        "       name   color star speed  Power  Attack  Defense  Health Aether Power  \\\n",
-       "868  Vivica  yellow    5  Slow  902.0   881.0    855.0  1638.0   Defense Up   \n",
+       "874  Vivica  yellow    5  Slow  902.0   881.0    855.0  1638.0   Defense Up   \n",
        "\n",
        "      source   family  \n",
-       "868  Season1  Classic  "
+       "874  Season1  Classic  "
       ]
      },
      "metadata": {},
@@ -2290,7 +2344,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>868</th>\n",
+       "      <th>874</th>\n",
        "      <td>Vivica</td>\n",
        "      <td>yellow</td>\n",
        "      <td>5</td>\n",
@@ -2309,10 +2363,10 @@
       ],
       "text/plain": [
        "       name   color star speed  Power  Attack  Defense  Health Aether Power  \\\n",
-       "868  Vivica  yellow    5  Slow  915.0   885.0    860.0  1717.0   Defense Up   \n",
+       "874  Vivica  yellow    5  Slow  915.0   885.0    860.0  1717.0   Defense Up   \n",
        "\n",
        "      source   family  \n",
-       "868  Season1  Classic  "
+       "874  Season1  Classic  "
       ]
      },
      "metadata": {},
@@ -2354,7 +2408,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>868</th>\n",
+       "      <th>874</th>\n",
        "      <td>Vivica</td>\n",
        "      <td>yellow</td>\n",
        "      <td>5</td>\n",
@@ -2373,10 +2427,10 @@
       ],
       "text/plain": [
        "       name   color star speed   Power  Attack  Defense  Health Aether Power  \\\n",
-       "868  Vivica  yellow    5  Slow  1058.0  1001.0    972.0  2218.0   Defense Up   \n",
+       "874  Vivica  yellow    5  Slow  1058.0  1001.0    972.0  2218.0   Defense Up   \n",
        "\n",
        "      source   family  \n",
-       "868  Season1  Classic  "
+       "874  Season1  Classic  "
       ]
      },
      "metadata": {},
@@ -2399,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2438,7 +2492,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>410</th>\n",
+       "      <th>412</th>\n",
        "      <td>Proteus C</td>\n",
        "      <td>purple</td>\n",
        "      <td>4</td>\n",
@@ -2457,10 +2511,10 @@
       ],
       "text/plain": [
        "          name   color star    speed  Power  Attack  Defense  Health  \\\n",
-       "410  Proteus C  purple    4  Average  823.0   975.0    699.0  1443.0   \n",
+       "412  Proteus C  purple    4  Average  823.0   975.0    699.0  1443.0   \n",
        "\n",
        "         Aether Power   source    family  \n",
-       "410  Ailment Immunity  Season2  Atlantis  "
+       "412  Ailment Immunity  Season2  Atlantis  "
       ]
      },
      "metadata": {},
@@ -2481,7 +2535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2518,7 +2572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2611,7 +2665,7 @@
        "[1 rows x 21 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
